# AdePT

./: CMakeLists.txt
base/inc/CopCore/include/CopCore/: Global.h
base/inc/CopCore/include/CopCore/backend/: CPUBackend.h  CUDABackend.h
base/inc/CopCore/src/: CPUBackend.cpp
examples/: CMakeLists.txt
examples/Example1/: CMakeLists.txt
examples/Example1/include/: SensitiveDetector.hh
examples/Example12/: example12.cpp
examples/Example13/: example13.cpp
examples/Example16/: example16.cpp
examples/Example18/: example18.cpp
examples/Example20/: main.cpp
examples/FisherPrice_cpp/: CMakeLists.txt
examples/IntegrationBenchmark/include/: SensitiveDetector.hh
examples/Raytracer_Benchmark/: CMakeLists.txt
include/AdePT/core/: AdePTTransport.cuh
include/AdePT/kernels/: electrons.cuh  gammas.cuh
src/: AdePTGeant4Integration.cpp
test/: CMakeLists.txt  test_atomic.cu  test_queue.cu  test_ranluxpp.cu
